# Secretariat

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.alpine  README.md  agent_instructions.txt  entrypoint.sh  fly.toml  local_build.sh  main.py  package-lock.json  package.json  pyproject.toml  requirements-armv6.in  requirements-armv6.txt  requirements-test.txt  requirements.in  requirements.txt  tailwind.config.js  test_components.html
.claude/: settings.json
.github/workflows/: ci.yml  docker-build.yml  docker-publish.yml
migrations/: env.py
migrations/versions/: 001_create_scheduled_tasks.py  0244e9c0e804_add_grocery_tables.py  1473f06d1455_make_conversation_id_nullable_in_.py  51319652cafb_add_interactive_column_to_scheduled_.py  9876b3e19398_create_separated_scheduled_tasks_table.py  af9839678dd6_remove_scheduledtask_next_run.py  eb89cf1bd63d_separate_schedule_type_and_config.py  f7c6b6e31ea4_add_scheduled_tasks_table.py  f8cd1dfc7404_initial_sqlite_migration.py
scripts/: README.md  add_timestamps_to_memories.py  empty_scheduling_tables.py  memories_with_timestamps.csv  setup_database.py
src/: __init__.py  config.py  error_handlers.py  extensions.py  forms.py  jinja_filters.py  routes.py
src/blueprints/: auth.py  automation.py  browser_auth.py  telegram.py
src/blueprints/core/: __init__.py  utils.py
src/models/: grocery.py  organisation.py  schedule_config.py  scheduled_task.py  settings.py  user.py  user_db.py
src/modules/: assets.py  assistance_monitor.py  browser_service.py  conversation_manager.py  database.py  decorators.py  email_service.py  event_handler.py  grocery_service.py  human_assistance_service.py  llm_service.py  logging_helper.py  memory.py  ngrok_service.py  novnc_proxy.py  sample_data.py  scheduling_service.py  text_utils.py  tool_manager.py  user_messaging_service.py  vector_generator.py  vnc_server.py
src/providers/: __init__.py  zen_provider.py
src/static/css/: input.css  styles.css
src/static/js/: README.md  sse.min.js
src/templates/: base.html  index.html  settings.html
src/templates/auth/: login.html
src/templates/browser_auth/: viewer.html
src/templates/macros/: collapsible-form-section.html  drawer.html  flash_messages.html  modal.html  todo_status.html  toggle_select.html  ui_message.html  ui_message_update.html  ui_messages.html
src/tools/: __init__.py  browser_tools.py  fallback_tool.py  fallback_tool.txt  grocery_tools.py  memory_tools.py  scheduling_tools.py  todo_read_tool.py  todo_storage.py  todo_tools.py  todo_write.txt  todo_write_tool.py  web_automation_tool.py
tests/: conftest.py
tests/integration/: __init__.py  test_settings_route.py
tests/unit/: conftest.py  test_config.py  test_forms.py  test_interactive_scheduling.py  test_settings_persistence.py  test_setup_mode.py
tests/unit/models/: test_schedule_config.py  test_settings.py
tests/unit/modules/: test_llm_service.py  test_memory.py  test_text_utils.py  test_tool_manager.py
tests/unit/tools/: test_grocery_tools.py  test_memory_tools.py  test_scheduling_tools.py
